<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintStart_toStartOf="@id/layoutPassword"
        app:layout_constraintEnd_toEndOf="@id/layoutPassword"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:startIconDrawable="@drawable/ic_account_circle_24"
        app:boxBackgroundColor="@color/white"
        app:layout_constraintBottom_toTopOf="@id/layoutPassword"
        app:layout_constraintEnd_toEndOf="parent"
        android:outlineSpotShadowColor="@color/black"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:outlineSpotShadowColor="@color/black"
        app:boxBackgroundColor="@color/white"
        app:startIconDrawable="@drawable/ic_key_24"
        app:layout_constraintBottom_toTopOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/layoutUsername"
        app:layout_constraintStart_toStartOf="@id/layoutUsername">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.facebook.login.widget.LoginButton
        app:layout_constraintTop_toBottomOf="@id/btnLogin"
        app:layout_constraintStart_toStartOf="@id/btnLogin"
        app:layout_constraintEnd_toEndOf="@id/btnLogin"
        android:id="@+id/btnLoginFB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="30dp" />

    <TextView
        android:id="@+id/txtSignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/signup"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@id/textView3"
        app:layout_constraintEnd_toEndOf="@+id/btnLoginFB"
        app:layout_constraintBaseline_toBaselineOf="@id/textView3"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/havAccount"
        app:layout_constraintEnd_toStartOf="@+id/txtSignup"
        app:layout_constraintStart_toStartOf="@+id/btnLoginFB"
        app:layout_constraintTop_toBottomOf="@+id/btnLoginFB" />
</androidx.constraintlayout.widget.ConstraintLayout>