<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/txtHello"
        style="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_lt_pro_black"
        android:text="Hey Guys,"
        android:textColor="@color/title"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="@id/imageView"
        app:layout_constraintTop_toBottomOf="@id/cvAvatar"
        app:layout_goneMarginTop="32dp" />

    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/avenir_lt_pro_light"
        android:text="@string/find"
        android:textColor="@color/description"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@id/txtHello"
        app:layout_constraintTop_toBottomOf="@id/txtHello" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvAvatar"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:foreground="?selectableItemBackground"
        app:cardCornerRadius="20dp"
        app:cardElevation="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgAvatar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/profile_avatar"
            android:foreground="#10000000"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/com_facebook_profile_picture_blank_square" />
    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvCourse"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="@id/cvAvatar"
        app:layout_constraintStart_toStartOf="@id/courses"
        app:layout_constraintTop_toBottomOf="@+id/courses" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintBottom_toBottomOf="@id/cvAvatar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/cvAvatar"
        app:srcCompat="@drawable/ham_menu" />

    <TextView
        android:id="@+id/courses"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_lt_pro_black"
        android:text="@string/courses"
        android:textColor="@color/title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/txt1"
        app:layout_constraintTop_toBottomOf="@id/txtLayoutSearch" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtLayoutSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:outlineProvider="none"
        app:hintEnabled="false"
        app:startIconTint="@color/icon"
        app:layout_constraintEnd_toEndOf="@id/cvAvatar"
        app:layout_constraintStart_toStartOf="@id/txt1"
        app:layout_constraintTop_toBottomOf="@id/txt1"
        app:startIconDrawable="@drawable/search">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_field"
            android:hint="@string/search"
            android:inputType="text"
            android:maxLines="1"
            android:scrollHorizontally="true"
            android:textColor="#A0A5BD" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/vocabulary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/avenir_lt_pro_black"
        android:text="@string/vocabulary"
        android:textColor="@color/title"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@id/courses"
        app:layout_constraintTop_toBottomOf="@id/rvCourse" />

    <TextView
        android:id="@+id/txtSeall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/see_all"
        android:textStyle="bold"
        android:textColor="@color/see_all"
        android:textSize="18sp"
        android:background="?selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/avenir_lt_pro_light"
        app:layout_constraintEnd_toEndOf="@+id/rvCourse"
        app:layout_constraintBaseline_toBaselineOf="@id/vocabulary"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvVocab"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@id/bottomNav"
        app:layout_constraintEnd_toEndOf="@id/rvCourse"
        app:layout_constraintStart_toStartOf="@id/rvCourse"
        app:layout_constraintTop_toBottomOf="@+id/vocabulary" />
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        app:menu="@menu/bottom_menu"
        android:layout_height="wrap_content"/>
</androidx.constraintlayout.widget.ConstraintLayout>